--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- 상단 네비게이션 -->
         <div class="page-nav">
-            <h1 class="logo">cargo<span class="logo-point">note</span></h1>
+            <h1 class="logo">C-<span class="logo-point">note</span></h1>
             <div class="nav-buttons">
                 <button type="button" id="refresh-btn">🔄</button>
                 <button type="button" id="back-to-main-btn" class="hidden">←</button>
